--- a/insertar/index.html
+++ b/insertar/index.html
@@ -9,39 +9,45 @@
     <h1>Insertar nuevo evento</h1>
 	 <form method="post" action="inserta.php">
 	 	 <label>Titulo</label><br>
-	 	 	<input type="text" name="titulo"><br>
-		 <label for="name" name="grupop">Grupo perpetrador:</label><br>
-	 		<select name="nomperp">
-			  <option value="value1">Us Police</option> 
-			  <option value="value2">Border Patrol</option> 
-			  <option value="value3">Narco</option> 
-			  <option value="value4">Policía MX</option>
-			  <option value="value5" selected>Otros</option>
+	 	 	<input type="text" name="titulo" required><br>
+		 <label for="name" name="grupopl">Grupo perpetrador:</label><br>
+	 		<select name="grupo">
+			  <option >US Police</option> 
+			  <option >Border Patrol</option> 
+			  <option >Narco</option> 
+			  <option >Polic&iacute;a MX</option>
+			  <option >Otros</option>
 			</select><br>
+		<label for="name">Sub-Grupo:</label><br>
+			<input type="text" name="subgrupo" required><br>
 	 	<label for="name">Nombre perpetrador:</label><br>
-	 		<input type="text" name="nomperp" value=""><br>
+	 		<input type="text" name="nomperp" value="" required><br>
 	 	<label for="name">Tipo de violencia:</label><br>
-	 		<input type="text" name="categoria" value=""><br>
+	 		<input type="text" name="categoria" value="" required><br>
 	 	<label for="name">Fecha:</label><br>
-	 		<input type="text" name="fecha" value="(año-mes-día)"><br>
-	 	<label for="name">Número de víctimas:</label><br>
-	 		<input type="text" name="numvictimas" value=""><br>
-	 	<label for="name">País:</label><br>
-	 		<input type="text" name="pais" value=""><br>
+	 		<input type="text" name="fecha" value="(a&ntilde;o-mes-d&iacute;a)" required><br>
+	 	<label for="name">N&uacute;mero de v&iacute;ctimas:</label><br>
+	 		<input type="text" name="numvictimas" value="" required><br>
+	 	<label for="name">Pa&iacute;s:</label><br>
+	 		<select name="pais">
+			  <option value = "1">M&eacute;xico</option> 
+			  <option value = "2">Estados Unidos</option> 
+			</select><br>
 		 <label for="name">Estado:</label><br>
-	 		<input type="text" name="estado" value=""><br>
+	 		<input type="text" name="estado" value="" required><br>
 	 	<label for="name">Municipio:</label><br>
-	 		<input type="text" name="municipio" value=""><br>
+	 		<input type="text" name="municipio" value="" required><br>
 	 	<label for="name">Latitud:</label><br>
-	 		<input type="text" name="long" value=""><br>
+	 		<input type="text" name="long" value="" required><br>
 	 	<label for="name">Longitud:</label><br>
-	 		<input type="text" name="lat" value=""><br>
-		<label for="message">Descripción:</label><br>
-	 		<textarea name="desc" value=""></textarea><br>
+	 		<input type="text" name="lat" value="" required><br><br>
+	 	<a href="http://www.latlong.net/" target="_blank">Buscar Longitud y Latitud</a><br>
+		<label for="message">Descripci&oacute;n:</label><br>
+	 		<textarea name="desc" value="" required></textarea><br>
 	 	<label for="message">Texto Completo:</label><br>
-	 		<textarea name="texto" value=""></textarea><br>
+	 		<textarea name="texto" value="" required></textarea><br><br>
 	 			
-	 	<input type="submit" value="Añadir evento">
+	 	<input type="submit" value="A&ntilde;adir evento">
 	 
 	 </form>
 </main>
