--- a/modificar/index.html
+++ b/modificar/index.html
@@ -7,8 +7,22 @@
  
 <main>
     <h1>Modificar:</h1>
+	<div id="BuscaMod1">
+		Buscador
+	</div>
 	<div>
-		{CONTENIDO}
+		<form method="post" action="modifica.php">
+		<br>La noticia incluye los apartados de Titulo, Nombre del Perpetrador, Numero de Victimas, Descripcion, Fecha, El texto de la noticia, longitud y latitud<br>
+		<br>Que campo desea modificar<br><br>
+		<select name="Campo">
+			<option>Noticia</option>
+			<option>Grupo</option>
+			<option>Estado</option>
+			<option>Municipio</option>
+			<option>Tipo de Violencia</option>
+		</select><br><br>
+		<input type="submit" value="OK">
+		</form>
 	</div>
 </main>
 
