Ya sirve modificar excepto modificar un evento, borre el archivo de conf.php de la carpeta de insertar ya que lo tenia en la carpeta principal y altere el main.js ya que hice pruebas de insertar.php

--- a/modificar/index.html
+++ b/modificar/index.html
@@ -12,7 +12,7 @@
 	</div>
 	<div>
 		<form method="post" action="modifica.php">
-		<br>La noticia incluye los apartados de Titulo, Nombre del Perpetrador, Numero de Victimas, Descripcion, Fecha, El texto de la noticia, longitud y latitud<br>
+		<br>La noticia incluye los apartados de Titulo, Nombre del Perpetrador, Numero de Victimas, Fecha, Estado donde ocurrio, Municipio donde ocurrio, Pais donde ocurriuo, Descripcion, El texto de la noticia, longitud y latitud<br>
 		<br>Que campo desea modificar<br><br>
 		<select name="Campo">
 			<option>Noticia</option>
@@ -21,6 +21,7 @@
 			<option>Municipio</option>
 			<option>Tipo de Violencia</option>
 		</select><br><br>
+		<input type='hidden' value='0' name="hidden">
 		<input type="submit" value="OK">
 		</form>
 	</div>
