Ya modificar evento esta habilitado pero falta el poder modificar el grupo, estado, municipio, pais o tipo de violencia

--- a/modificar/index.html
+++ b/modificar/index.html
@@ -15,7 +15,7 @@
 		<br>La noticia incluye los apartados de Titulo, Nombre del Perpetrador, Numero de Victimas, Fecha, Estado donde ocurrio, Municipio donde ocurrio, Pais donde ocurriuo, Descripcion, El texto de la noticia, longitud y latitud<br>
 		<br>Que campo desea modificar<br><br>
 		<select name="Campo">
-			<option>Noticia</option>
+			<option>Evento</option>
 			<option>Grupo</option>
 			<option>Estado</option>
 			<option>Municipio</option>
