nuevos nombres, las formas ya tienen formato, no se ha resuelto lo de las ventanas

--- a/borrar/index.html
+++ b/borrar/index.html
@@ -8,18 +8,10 @@
 <main>
     <h1>Borrar:</h1>
 	<div id="BuscaBorra1">
-		Buscador
+		Buscador <input type="text" value="Busca"><br>
 	</div>
 	<div>
 		<form method="post" action="borra.php">
-		<br>Que deseas borrar<br><br>
-		<select name="tabla">
-			<option>Evento</option>
-			<option>Grupo</option>
-			<option>Estado</option>
-			<option>Municipio</option>
-			<option>Tipo de Violencia</option>
-		</select><br><br>
 		Forma de identificar lo que deseas borrar (Si es el evento el titulo, si es un estado, municipio, pais o grupo por su nombre y si es un tipo de violencia por la categoria)
 		<br><br><input type="text" name="identifier" required><br><br>
 		<input type="submit" value="OK"><br>
