ya tenemos el buscador

--- a/borrar/index.html
+++ b/borrar/index.html
@@ -8,7 +8,9 @@
 <main>
     <h1>Borrar:</h1>
 	<div id="BuscaBorra1">
-		Buscador <input type="text" value="Busca"><br>
+		<div>Tabla</div>
+		<input type="text" value="Busca Noticia">
+		<input type="button" value="Buscar" onclick="BuscaBorra(1)"><br><br>
 	</div>
 	<div>
 		<form method="post" action="borra.php">
