Ya esta el buscador con los links, insrta ya esta corregido y ya la pag principal tiene links a la noticia completa

--- a/borrar/prueba.html
+++ b/borrar/prueba.html
@@ -1,22 +1,10 @@
-<form>
-	<div>
-		Buscar:&nbsp; &nbsp;<input type="text" name="Buscador">
-	</div>
-	<br>
-	<div>
-		<input type="button" name="Buscar" value="Buscar">
-	</div>
-	<div>
-		<table style="width = 100%">
-			<tr>
-				<td>ID</td>
-				<td>Titulo</td>
-				<td>Resumen</td>
-				<td>Fecha</td>
-				<td>Estado</td>
-				<td>Municipio</td>
-				<td>Pais</td>
-			</tr>
-		</table>
-	</div>
-</form>
+<?php
+	$pagetitle = 'Insertar';
+	require_once("../inc/config.php");
+?> 
+
+<?php include(ROOT_PATH . 'inc/header.php'); ?>
+
+<div>
+	<div class="titx">Titulo</div>	
+</div>
